--- a/tsconfig.json
+++ b/tsconfig.json
@@ -72,6 +72,9 @@
       "@entities/*": [
         "src/entities/*"
       ],
+      "@services/*": [
+        "src/services/*"
+      ],
       "@shared/*": [
         "src/shared/*"
       ],
